[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gecko"
version = "0.1.0"
description = "Search and download ROMs by game name"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "playwright>=1.44",
    "rich>=13.0",
]

[project.scripts]
gecko = "gecko.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["gecko*"]

[tool.setuptools.package-data]
gecko = ["bin/*"]
